--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,28 +34,28 @@ $teal-green3:         #5FC5C1;
 @import 'bootstrap';
 
 /*==================================================
- * TEST
+ * MY PROFILE VIEW
  * ===============================================*/
  [class^="icon-"], [class*=" icon-"] {
    background-image: url(/assets/glyphicons-halflings.png)
  }
 
-.blue {
+/*.blue {
   background-color: $background-blue;
   margin-left: 20px;
-  }
+  }*/
 
 /*OPTION ONE*/
 
-hr.gray-dotted {
+/*hr.gray-dotted {
   background: url(gray_dotted_line.png) repeat-x top left;
   border: 0;
   height: 5px;
-  }
+  }*/
 
 
 /* OPTION TWO*/  
-.stitched-title {
+/*.stitched-title {
   position: relative;
   z-index: 500;
   width: 250px;
@@ -72,7 +72,7 @@ hr.gray-dotted {
 	position: relative;
 	z-index: 0;
 	margin: 10px;
-	/*background: url(blue_pattern_background.gif) repeat scroll 0 0 transparent;*/
+	background: url(blue_pattern_background.gif) repeat scroll 0 0 transparent;
 	background: white;
 	color: $teal-green2;
 }
@@ -87,7 +87,7 @@ hr.gray-dotted {
   -moz-box-shadow: 0 0 0 4px white, 2px 1px 4px 4px $lighter-gray;
   -webkit-box-shadow: 0 0 0 4px white, 2px 1px 4px 4px $lighter-gray;
   box-shadow: 0 0 0 4px white, 2px 1px 6px 4px $lighter-gray;  
-  }
+  }*/
 
 
 
@@ -123,7 +123,7 @@ hr.gray-dotted {
   } 
   
 /*OPTION FOUR*/ 
-.op4-title {
+/*.op4-title {
   position: relative;
   z-index: 500;
   width: 250px;
@@ -149,14 +149,13 @@ hr.gray-dotted {
   position: relative;
   border-top: 3px dashed $teal-green;
   background-color: #F8F8F8;
-  /*background: url(linen_background.jpg) repeat scroll 0 0 transparent;*/
+  background: url(linen_background.jpg) repeat scroll 0 0 transparent;
   z-index: 0;
   top: -15px;
-  }  
+  }*/  
 
 /* OPTION FIVE*/
-
-.op5-title {
+/*.op5-title {
   font-size: 14px; 
   color: $bubboli-red;
   position: relative;
@@ -165,6 +164,14 @@ hr.gray-dotted {
  	margin-right: auto;
  	background: white;
  }
+
+.test-stitch {
+   position: relative;
+   background: url(gray_dotted_line.png) repeat-x scroll 0 0 transparent;
+   z-index: 0;
+   top: -15px;
+   color: white;
+ }*/
 
 .upcoming-birthdays {
   width: 190px;  
@@ -176,15 +183,6 @@ hr.gray-dotted {
 
 .all-children {
   width: 225px;  
-  }
-
-
-.test-stitch {
-  position: relative;
-  background: url(gray_dotted_line.png) repeat-x scroll 0 0 transparent;
-  z-index: 0;
-  top: -15px;
-  color: white;
   }
   
 /*==================================================
