--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -5,19 +5,18 @@
   YOUR INVITATION REQUESTS
 </div>
 
-<div class="test-stitch"><br></div>
-
+<div class="test-stitch"><br></div> 
   <div class="row">
     <%= form_for :invitation, :multipart => true, :remote => true, :url => invitation_confirm_or_delete_url do |f| %>
       <% @invitations.each do |r| %>
         <ul class="child-list">
           <li class="children-following child-list block">
-            <%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.try(:child_images).try(:first) %>
-            <%= r.child.try(:first_name) %>
-            <%= r.sender.try(:first_name)%>
+            <%= image_tag(r.sender.image_url(:sm_thumb)) if r.sender.try(:image) %>
+            <%= r.child.try(:first_name) %><br>
+            <%= r.sender.try(:first_name)%><br>
             <%= link_to 'Not My Child', invitation_confirm_or_delete_path(r, {:child => 'delete', :invitation => {:id => r.id}}) %>
             <%= f.hidden_field :id, :value => r.id %> <%# FIXME remove hidden field at some point %>
-            <%= select_tag 'child', options_from_collection_for_select(@confirmed_children, 'id', 'first_name'), :prompt => 'Confirm This Child As', :onChange=>"this.form.submit()" if @confirmed_children.any? %>    
+            <%= select_tag 'child', options_from_collection_for_select(@confirmed_children, 'id', 'first_name'), :prompt => 'Confirm This Child As', :class => "input-110", :onChange=>"this.form.submit()" if @confirmed_children.any? %>    
           </li>  
         </ul>  
       <% end %>
@@ -30,7 +29,7 @@
   MY KIDS' REQUESTS
 </div>
 
-<div class="test-stitch"><br>
+<div class="test-stitch"><br></div>
 
   <div class="row">
     <ul class="child-list">
@@ -44,4 +43,3 @@
     </ul>
   </div>
 
-</div>
