--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -25,12 +25,14 @@
   </script>
   
 </head>
+
 <body>
-  
+
+<div class="wrapper">  
 <%= render partial: "layouts/header" %>
 
-    <div class="container">
-      <hr class="subnav-top">
+  <div class="container">
+    <hr class="subnav-top">
 
       <ul class="sub-nav pull-left">    
         <li><%= link_to "UPCOMING BIRTHDAYS", '#' %></li>
@@ -40,58 +42,54 @@
       
       <%= render partial: "layouts/subnav" %>
       
-      <hr class="subnav-bottom">
-    </div>
+    <hr class="subnav-bottom">
   </div>
+  </div><%# div from the header partial %>
+  
+<div class="proper-content">
 
 <%= render partial: "shared/flash_messages", flash: flash %> <br>
 
-
-
-    <div class="container">
+  <div class="container">
   
-      <div class="row">
+    <div class="row">
     
-        <div class="span3 static-left-side" > 
-          <div class="profile-well">
+      <div class="span3 static-left-side" > 
+        <div class="profile-well">
           <%= image_tag(@user.image_url(:profile_pic)) if @user.image? %>
-          </div>
+        </div>
           
-          <br>
+        <br>
       
-          <div>      
-            Name: <%= current_user.first_name %><br>
-            Location: <%= current_user.address_city if current_user %>, <%= current_user.address_state if current_user %>
-          </div>  
+        <div>      
+          Name: <%= current_user.first_name %><br>
+          Location: <%= current_user.address_city if current_user %>, <%= current_user.address_state if current_user %>
+        </div>  
         
-          <div class="btn-group space-break">
-            <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.followings.count, following_path %></span></br><span style="color: #999999">Following</span></button>
-            <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.my_kids_followers.count, followers_path %></span></br><span style="color: #999999">Followers</span></button>
-            <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.pending.count, pending_path %></span></br><span style="color: #999999">Pending</span></button>
-            <button class="btn btn-borderless btn-grp-small-size"><span class="pending_link"><%= link_to User.invitation_count(current_user) + @user.my_kids_requests.count, requests_path %></span></br><span style="color: #999999">Requests</span></button>
-          </div>
-
+        <div class="btn-group space-break">
+          <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.followings.count, following_path %></span></br><span style="color: #999999">Following</span></button>
+          <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.my_kids_followers.count, followers_path %></span></br><span style="color: #999999">Followers</span></button>
+          <button class="btn btn-borderless btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.pending.count, pending_path %></span></br><span style="color: #999999">Pending</span></button>
+          <button class="btn btn-borderless btn-grp-small-size"><span class="pending_link"><%= link_to User.invitation_count(current_user) + @user.my_kids_requests.count, requests_path %></span></br><span style="color: #999999">Requests</span></button>
         </div>
-    
-    
-        <div class="offset3 span9">
-
-          <%= yield %>
-    
-        </div>
+          
       </div>
-      
-      
+    
+    
+      <div class="offset3 span9">
+
+        <%= yield %>
+    
+      </div>
     </div>
-    <div class="push"></div>
-</body>
+  </div>
+</div>
 
-
-
-<div>
+<div class="push"></div>
+</div>
   <footer>
     <br>
     <%= render partial: "layouts/footer" %>
   </footer>
-</div>
+</body>
 </html>
