--- a/app/views/relationships/_recommended_gifts.html.erb
+++ b/app/views/relationships/_recommended_gifts.html.erb
@@ -2,7 +2,7 @@
   
     <ul>
     <% @gifts_by_user_pref.each do |gift| %>
-      <li class="recommended-gifts block">
+      <li class="recommended-gifts no-bullet block">
         <%= link_to image_tag(gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(gift) %>
         <%= link_to gift.name, gift_path(gift) %><br>
         <% link = "http://"+gift.permalink %>
