--- a/app/views/gift_accessions/index.html.erb
+++ b/app/views/gift_accessions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   
-  <%= link_to "<<< Back to #{@child.first_name}", relationship_path(@relationship) %><br>
+  <%= link_to "<<< Back to #{@child.first_name}", relationship_path(@relationship) %><br><br>
 
   <div class="op3-title op3-stitched-shadow">
     Add to Purchased Gifts
