--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -18,7 +18,7 @@ $('#gift_search').hide();
 
 <i class="icon-user"></i> <span class="red-link"><%= link_to "Back To My Profile", user_path(current_user)%></span><br><br>
 
-
+<%# change this later%>
   <div class="op3-title op3-stitched-shadow">
     <%= link_to "Photos of  #{@child.first_name}", child_child_images_path(@child) %>
   </div>
