adds reminder management to relationships

--- a/app/views/layouts/relationship.html.erb
+++ b/app/views/layouts/relationship.html.erb
@@ -100,20 +100,18 @@
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  TBD...
+                  <p>Check all that applies:</p>
+                  <%= simple_form_for @relationship, :html => {:class => "form-inline"} do |f| %>
+                    <% ReminderOption.all.each do |option| %>
+                      <%= f.input option.name, as: :boolean, :item_wrapper_class => 'span2'%>
+                    <% end %>
+                    <%= f.button :submit, 'Update Reminders', :class => 'primary pull_left'%>
+                  <% end %>
                 </div>
               </div>
             </div>
           </div>
           
-          
-          
-          
-          
-          
-          
-          
-
         </div>
     
     
