--- a/app/views/gifts/baby_shower.html.erb
+++ b/app/views/gifts/baby_shower.html.erb
@@ -9,7 +9,7 @@
     
     <div class="span2 form-stacked toy-search">
       <p class="mynewfont">Search Criterias</p>
-      <%= simple_form_for @search_favorite, :url => favorite_gift_path do |f| %>
+      <%= simple_form_for @search_baby_shower, :url => baby_shower_gift_path do |f| %>
         <%= render(:partial => "gift_search", :locals => {:f => f})%>
       <% end %>
       
