--- a/app/views/layouts/relationship.html.erb
+++ b/app/views/layouts/relationship.html.erb
@@ -84,7 +84,7 @@
               <div id="collapseOne" class="accordion-body collapse in">
                 <div class="accordion-inner">
                   <%= simple_form_for @relationship, :html => {:class => "form-inline"} do |f| %>
-                    <%= f.association :relation_type, :as => :collection_select, :input_html => {:class => "input-small"}, :label => "Relation To Child"%>
+                    <%= f.association :relation_type, :as => :collection_select, :collection => @relation_type, :input_html => {:class => "input-small"}, :label => "Relation To Child"%>
                     <%= f.association :gift_categories, :as => :check_boxes, :item_wrapper_class => "span2" %>
                     <%= f.association :gift_price_ranges, :as => :check_boxes, :item_wrapper_class => "span2" %>
                     <%= f.button :submit, :class => "primary pull-left" %>
