--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -350,8 +350,17 @@ li.inline  {
   }
 
 .index-background {
-background: url(blue_pattern_background.gif) repeat scroll 0 0 transparent;
-}
+  background: url(blue_pattern_background.gif) repeat scroll 0 0 transparent;
+  /*opacity: 0.7;
+  filter:alpha(opacity=70);*/
+  }
+
+.approve-gift-background {
+  background: $bubboli-yellow;
+  margin-left: 0px;
+  /*opacity: 0.7;
+  filter:alpha(opacity=70);*/
+  }
 
 #step_three {
   /*background: url(blue_w_gray_line_top.jpg);*/
