--- a/app/views/relationships/_recommended_gifts.html.erb
+++ b/app/views/relationships/_recommended_gifts.html.erb
@@ -7,7 +7,7 @@
         <%= link_to gift.name, gift_path(gift) %><br>
         <% link = "http://"+gift.permalink %>
         <div class="row span2 offset1">
-        <button class="btn btn-mini btn-success btn-spacing white-link btn-fixed-bottom"><%= link_to "Buy This", link, :target => "_blank" %></button>
+        <%= link_to "Buy This", link, :class => "btn btn-mini btn-success btn-spacing white-link btn-fixed-bottom", :target => "_blank" %>
         </div>
       </li>
     <% end %>
