added link to register for account

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -345,6 +345,13 @@ li.inline  {
   margin-left: 10px;
   }
 
+.register_link {
+  font-size: 11px; 
+  text-align: center;
+  margin-top: -30px;
+  margin-left: 35px;
+  }
+  
 /*==================================================
  * INDEX PAGE
  * ===============================================*/
