created user default image and added child profile image to user show page but child default image not working still

--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -56,7 +56,7 @@
     
       <div class="span3 static-left-side" > 
         <div class="profile-well">
-          <%= image_tag(@user.image_url(:profile_pic)) if @user.image? %>
+          <%= image_tag(@user.image_url(:profile_pic)) if @user.image %>
         </div>
           
         <br>
