--- a/app/views/users/_child_list.html.erb
+++ b/app/views/users/_child_list.html.erb
@@ -1,3 +1,3 @@
-<%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.child_images.first %>
+<%= image_tag(r.child.profile_picture.image_url(:profile_pic)) if r.child.profile_picture %>
 <strong><%= link_to r.child.first_name, relationship_path(r) %></strong><br>
 <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span><br>
