added default child pic if no pics to relationship layout page and child list partial

--- a/app/views/layouts/relationship.html.erb
+++ b/app/views/layouts/relationship.html.erb
@@ -56,7 +56,11 @@
     
         <div class="span3" > 
           <div class="profile-well">
-            <%= image_tag(@child_images.first.child.profile_picture.image_url(:profile_pic)) if @child_images.first %>
+            <% if @child_images.empty? %>
+              <%= image_tag('profile_pic_default.jpg') %>
+            <% else %>
+              <%= image_tag(@child_images.first.child.profile_picture.image_url(:profile_pic)) if @child_images.first %>
+            <% end %>
             <span style="font-size: 12px; font-weight: bold;"><%= @child.first_name %>, Child ID: <%= @child.id %></span><br>
             Location: <span class="float-right"><%= @child.child_city%>, <%= @child.child_state %></span><br>
             Parent: <span class="float-right"><%= @child.first_child_parent.user.first_name if @child.first_child_parent %></span><br>
