--- a/app/views/users/_child_list.html.erb
+++ b/app/views/users/_child_list.html.erb
@@ -1,3 +1,7 @@
-<%= image_tag(r.child.profile_picture.image_url(:profile_pic)) if r.child.profile_picture %>
+<% if r.child.child_images.empty? %>
+  <%= image_tag('profile_pic_default.jpg') %>
+<% else %>
+  <%= image_tag(r.child.profile_picture.image_url(:profile_pic)) if r.child.profile_picture %>
+<% end %>
 <strong><%= link_to r.child.first_name, relationship_path(r) %></strong><br>
 <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span><br>
