added default pic to following and pending pages

--- a/app/views/users/_relationship.html.erb
+++ b/app/views/users/_relationship.html.erb
@@ -1,4 +1,8 @@
-<%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.child_images.first %>
+<% if r.child.child_images.empty? %>
+  <%= image_tag('profile_pic_default.jpg') %>
+<% else %>
+  <%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.child_images.first %>
+<% end %>
 <strong><%= link_to r.child.first_name, relationship_path(r) %></strong><br>
 <span style="color: #999999; font-size: 12px">Relations:<%= r.relation_type.name if r.relation_type %></span><br>
 <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span>
