--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -8,8 +8,8 @@
 <div class="test-stitch"><br></div> 
   <div class="row">
     <div class="add-margin">If you do not see your child in the drop down menu, please <%= link_to "add your child first", new_my_child_path %>.</div>
-    <%= form_for :invitation, :multipart => true, :remote => true, :url => invitation_confirm_or_delete_url do |f| %>
-      <% @invitations.each do |r| %>
+    <% @invitations.each do |r| %>
+      <%= form_for :invitation, :multipart => true, :remote => true, :url => invitation_confirm_or_delete_url, :id => 'invitation_form' do |f| %>
         <ul class="child-list">
           <li class="children-following child-list block">
             <%= image_tag(r.sender.image_url(:sm_thumb)) if r.sender.try(:image) %>
@@ -17,13 +17,12 @@
             <%= r.sender.try(:first_name)%><br>
             <%= link_to 'Not My Child', invitation_confirm_or_delete_path(r, {:child => 'delete', :invitation => {:id => r.id}}) %>
             <%= f.hidden_field :id, :value => r.id %> <%# FIXME remove hidden field at some point %>
-            <%= select_tag 'child', options_from_collection_for_select(@confirmed_children, 'id', 'first_name'), :prompt => 'Confirm This Child As', :class => "input-110", :onChange=>"this.form.submit()" if @confirmed_children.any? %>    
+            <%= select_tag 'child', options_from_collection_for_select(@confirmed_children, 'id', 'first_name'), :prompt => 'Confirm This Child As', :class => "input-110", :onchange=>"this.form.submit();" if @confirmed_children.any? %>    
           </li>  
         </ul>  
       <% end %>
     <% end %>
   </div>
-<% else %>
 <% end %>
 <br>
 
