--- a/app/views/children/search_child.html.erb
+++ b/app/views/children/search_child.html.erb
@@ -23,30 +23,29 @@
           <p>No results found. Be the first to add this child.</p>
           <%= render 'new', :invitee => @search_term %>
         <% else %>
+          <ul class="child-list">
           <% @children.each do |child| %>
           <% rel = current_user.relationships.where(:child_id => child.id).to_a %>
-              <div class="row span4">  
-                <div class="span2 image-placeholder">
-                
-                </div>
-                <div class="span2">
-                    <div id="follow_form">
-                        <li class="child-search-result block">
-                          <% if current_user.following?(child) %>
-                            <%= link_to child.first_name, relationship_path(rel)%>
-                            <%= render(:partial => 'unfollow', :locals => {:child => child})%>
-                          <% elsif current_user.requested?(child) %>
-                            <%= child.first_name %></br>
-                            Requested
-                          <% else %>
-                            <%= child.first_name %></br>
-                            <%= render(:partial => 'follow', :locals => {:child => child})%>
-                        </li>  
-                    <% end %>
-                    </div>
-                </div>
-              </div>
-          <% end %>
+            <div id="follow_form">
+              
+              <li class="children-following child-list block">
+                <% if current_user.following?(child) %>
+                  <%= child.profile_picture ? image_tag(child.profile_picture.image_url(:profile_pic)) : image_tag('profile_pic_default.jpg') %>
+                  <%= link_to child.first_name, relationship_path(rel)%>
+                  <%= render(:partial => 'unfollow', :locals => {:child => child})%>
+                <% elsif current_user.requested?(child) %>
+                  <%= child.profile_picture ? image_tag(child.profile_picture.image_url(:profile_pic)) : image_tag('profile_pic_default.jpg') %>
+                  <%= child.first_name %></br>
+                  Requested
+                <% else %>
+                  <%= child.profile_picture ? image_tag(child.profile_picture.image_url(:profile_pic)) : image_tag('profile_pic_default.jpg') %>
+                  <%= child.first_name %></br>
+                  <%= render(:partial => 'follow', :locals => {:child => child})%>
+                <% end %>
+              </li>  
+            
+            </div>  
+          <% end %>  
         <% end %>
         </ul>        
       </div>
